--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body xmlns:th="http://www.thymeleaf.org">
 
+<h2 th:text="${title}">
 </body>
 </html>
